<resources>
    <string name="app_name">FutureInvestment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="email_loggin">Email</string>

    <string name="password_loggin">Password</string>

    <string name="loggin_btn">Log in</string>

    <string name="firebase">FutureInvestment</string>

    <string name="createAcc">New user ?</string>

    <string name="newAcc"><u>Register now</u></string>

    <string name="retypepss">Retype password</string>

    <string name="register">Register</string>

    <string name="already">Already have an account?</string>

    <string name="please"><u>Please LogIn</u></string>
    <string name="no_internet">No internet connection</string>

    <string name="no_internet_message">This app requires internet connection order to work properly</string>
    <string name="disclaimer">All the tip\'s given to you are based on our studies, judgments and the analysis available on particular point of time. Adequate precautions will be taken to draw those tips, however directors, employees or the technicians of the company will not be responsible for the losses or gains made through the calls, either legally or otherwise. Members are strictly advised to exercise the tips at their own risk. We shall also not take responsibility for failure of connectivity of network and internet for any reasons, whatsoever or otherwise. It is advisable for the customers to act cautiously and to cross check information before taking any investment decisions and without assigning any liability to us.

\n\n  <b>FUTUREINVESTMET</b> is not liable for your decisions/actions taken on the market for stock or investment transactions. The information provided here is based on our studies and we do not ask/force you to take market positions in any particular stock.

\n\nYou are well aware and understand that the informations provided are for your personal information only and do not construe to be any investment, legal or taxation advice to you. Any action taken by you on the basis of the information contained in this site is your responsibility alone and FUTUREINVESTMENT will not be liable in any manner for the consequences of such action taken by you.

\n\n <b>FUTUREINVESTMET</b> is not responsible for any loss of cheques, DD etc neither is responsible for any delay in tips due to payments which are not received. Your services will only be activated after we receive complete payment if any.

\n\n  <b>FUTUREINVESTMENT</b> provides tips according to IST (Indian standard time). So member should make it sure that they are investing according to this. We will not entertain any loss due to this issue.

Stock market is not a place for claiming guaranteed returns - the information contained herein is based on our analysis and we consider them reliable. We, however, do not vouch for the accuracy or the completeness of the material on this page. This material is for personal information and we are not responsible for any loss incurred based upon it. The investments discussed or recommended in this report may not be suitable for all investors. Investors must make there own investment decisions based on their specific investment objectives and financial position and using such independent advice, as they believe necessary. The information and analysis is based on various statistical reports which are dependent on high volatile market condition. The prediction is based on personal views and experience. These can\'t be taken as the final and accurate to invest or trade in the market.
The risk of profit and loss is 100%% based on the customer, as many factors affect the analysis i.e. Government policies, natural calamities, international market and prices which are beyond our control.

\n\n  <b>FUTUREINVESTMENT</b> uses all such information gathered to enhance user experience on the site. We do not rent or sell any personal information about our subscribers or other users, except when required by law or if the subscriber enters a contest or uses any other special offer. In any case, this information is provided only to sponsors of the specific program and not for general-purpose use

\n\n  <b>FUTUREINVESTMENT</b> reserves the right to make modifications and alterations in the material contained at this site without any intimation to you of such modifications.

\n\n  <b>FUTUREINVESTMENT</b> reserves the right to monitor the use of all or any part of this service and change terms without any obligation.

\n\n <b>FUTUREINVESTMENT</b> shall not be liable at any time, for any failure of performance, error, omission, interruption, deletion, defect, delay in operation or transmission, computer virus, communications line failure, theft or destruction or unauthorised access to, alteration of, or use of information contained at this site.

\n\n  <b>FUTUREINVETSMENT</b> or any of its affiliates or associates or employees shall not be in any way responsible for any loss or damage that may arise to any person from any inadvertent error in the information contained in this site.

\n\n  <b>The information</b> contained in this site is for personal use only. You may take print outs or download the same provided you keep the material intact and do not violate the copyrights, trademarks, and other proprietary rights. Any alteration of the material or use of the material contained in this site for any other purpose is a violation of the copyright of FUTUREINVESTMENT and/or its affiliates or associates or of its third-party information providers. This material cannot be copied, reproduced republished, uploaded, posted, transmitted or distributed in any way for non-personal use without obtaining the prior permission from FUTUREINVESTMENT

\n\n  <b>This agreement</b> shall be subject to the jurisdiction of the Bengaluru.

\n\n <b> We shall not</b> be liable or held responsible related to your knowledge of using computers and if there is some problem in your computer or you don\'t have full knowledge in using your computer and operating system then please consult some professional to operate your computer successfully.

\n\n  <b>We will not</b> be held responsible if the subscriber did not receive sms or received late as their is high possibility of network congestion, which might cause this problem. Its the subscriber\'s duty to ask us before making payment if we cover his/her cellphone network or not.

\n\n  <b>We will not refund</b>, if the subscriber claims that he did not receive any sms from us and if we have send sms regularly to him/her and his/her cellphone network is covered by us.

\n\n <b>The recommendation</b> are based on the theory of technical analysis and do not reflect the fundamental validity of the script.

\n\n <b> All views and recommendation</b> are applicable till the stop loss is not violated. The view communicated or recommended will be not be valid if the stop loss is violated.
</string>
</resources>
