<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.google.example.adinaranayaragh.LogInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/loggin_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="11dp"
            android:background="@color/textcolor_blue"
            android:text="@string/loggin_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_inp" />

        <EditText
            android:id="@+id/Email_inp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email_loggin"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/password_inp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/password_loggin"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email_inp" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="156dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/createAcc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/yellowfb"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loggin_btn" />

        <TextView
            android:id="@+id/RegisterTxt"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:onClick="create"
            android:text="Register now"
            android:textColor="@color/textcolor_blue"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loggin_btn" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/futureinvestment" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="FutureInvestment"
            android:textColor="@color/textcolor_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>


